sp drawer name added

--- a/develop/index.ejs
+++ b/develop/index.ejs
@@ -95,8 +95,11 @@
     <div class="header__wrapper">
       <a href="#" class="header__logo">Singh Ratna</a>
   
-    <!-- PC navigation -->
+    <!-- Mobile Navigation with Name -->
     <nav class="header__nav">
+      <div class="mobile-drawer-header show-sp">
+        <span class="mobile-drawer-name">Singh Ratna</span>
+      </div>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
