shikhar dental demo

--- a/develop/index.ejs
+++ b/develop/index.ejs
@@ -187,7 +187,7 @@
               <span class="skill-tag" data-years="4">#JavaScript</span>
               <span class="skill-tag" data-years="3">#jQuery</span>
               <span class="skill-tag" data-years="1">#JSON</span>
-              <span class="skill-tag" data-years="3">#EJS</span>
+              <span class="skill-tag" data-years="1">#Python</span>
               <span class="skill-tag" data-years="4">#Gulp</span>
               <span class="skill-tag" data-years="2">#Node.js</span>
               <span class="skill-tag" data-years="3">#PHP</span>
