--- a/develop/index.ejs
+++ b/develop/index.ejs
@@ -348,7 +348,7 @@
       <div class="box-container container">
 
         <div class="box">
-          <i class="fas fa-phone"></i>
+          <a class="shikhar-link" href="tel:01-5200835"><i class="fas fa-phone"></i></a>
           <h3>phone number</h3>
           <p>
             <a class="shikhar-link" href="tel:9849245461">9849245461</a> / <a class="shikhar-link" href="tel:01-5200835">01-5200835</a>
@@ -357,7 +357,7 @@
         </div>
 
         <div class="box">
-          <i class="fas fa-map-marker-alt"></i>
+          <a href="https://www.google.com/maps?q=Alpine+Tole,+Mahalaxmi+04,+Lalitpur" target="_blank" class="shikhar-link"><i class="fas fa-map-marker-alt"></i></a>
           <h3>our address</h3>
           <p><a href="https://www.google.com/maps?q=Alpine+Tole,+Mahalaxmi+04,+Lalitpur" target="_blank" class="shikhar-link">Alpine Tole, Mahalaxmi 04, Lalitpur</a></p>
         </div>
@@ -369,7 +369,7 @@
         </div>
 
         <div class="box">
-          <i class="fas fa-envelope"></i>
+          <a href="mailto:shikhardentalcare@gmail.com" class="shikhar-link"><i class="fas fa-envelope"></i></a>
           <h3>email address</h3>
           <p>
             <a href="mailto:shikhardentalcare@gmail.com" class="shikhar-link">shikhardentalcare@gmail.com</a>
